# GeneralRepository

./: README.md
ArreglarDebug/: Ejercis.cpp
Asembly/PrimerosTest/: NumeroUno.asm
C++/Arreglos/: ArreglosAvansados.cpp  LogicaCandy.cpp  MatricesSencillos.cpp  Practica.cpp
C++/Ejercicios/: Akerman.cpp  CambioDeLetrasANumeros.cpp  CifradoCesar.cpp  Diagnostico.cpp  LuisJuego.cpp  OpcionesPorChar.cpp  PracticaQuis.cpp  Primer_CDSN.cpp  Promedio.cpp  ProyectoLuis.cpp  ProyectoRevisado_DMQC.cpp  Testeos.cpp
C++/Estructuras/: PracticaAvanzada.cpp
C++/Listas/: CodigoBinario.cpp  CodigoBinario2,0.cpp  EjercicioDos.cpp  EjercicioTres.cpp  EjerciocioUno.cpp  Nodo.cpp  PrimeraPract.cpp
C++/POO/: UMLPracticas.cpp
C++/Punteros/: EjecicioOne.cpp  Punteros.cpp  PunterosClase.cpp  PunterosTuto.cpp
C++/Recursividad/: N-Queens.cpp  PracticaUno.cpp
Codigo/C++/: CambioDeLetrasANumeros.cpp  CifradoCesar.cpp  LuisJuego.cpp  NumeroPerfecto.cpp  PracticaArreglos.cpp  Promedio.cpp  ProyectoLuis.cpp  SerparacionDeCaracteres.cpp  SortsAndSearch.cpp  Testeos.cpp
Codigo/Python/: Calculadora en una sola linea.py  Primer testeo.py
HTML/Cartas testeo 2/: Index.html  styles.css
HTML/Login 1 testeo/: colorful-image-mountains-mountains.avif  index.html  style.css
HTML/Login pages/: background.avif  index.html  script.js  style.css
HTML/Login pages 2/: index.html  styles.css
HTML/Proyecto 1/: index.html  script.js  (+1 more)
JavaScript/: Testeos.js
Proyectos/: Si.cpp
Python/: Como hacer columnas cada vez mas grandes.py  Piramide.py  Pruebas.py  Rosa en python.py  TesteoDebug.py
(+79 files in other folders)
